--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<script>if(document.location.protocol == 'http:')document.location.protocol = 'https';</script>
 		<title>icebox</title>
 		<script src='./assets/ice.js'></script>
-		<script src='./assets/highlight/highlight.min.js'></script>
+		<script src='./assets/highlight/highlight.pack.js'></script>
 		<script src='./assets/marked/marked.min.js'></script>
 		<script src='./assets/main.js' async></script>
 		<link rel="alternate" type="application/rss+xml" title="icebox" href="https://quininer.github.io/rss.xml" />
